# dev-eficiente-ia

./: annotations.md  main.py  pyproject.toml
fundamentos-de-rag/: rag-qdrant.py  rag.py
fundamentos-de-rag/docling/: 1-extraction.py  2-extraction-images.py  3-chunking.py  4-hybrid-chunker.py  5-metadados.py  5.1-metadados.py  6-embeddings.py
fundamentos-gen-ai/: llm-02.py
fundamentos-system-retrieval/: tokenization-01.py  tokenization-02.py  tokenization-03.py  tokenization-04.py
